--- a/Lab1_classification.ipynb
+++ b/Lab1_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyML5MRw7y5aC0Sbg+U2Rgzv",
+      "authorship_tag": "ABX9TyNpjpb1HqQ9TbqT4LanIKwc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,7 @@
     {
       "cell_type": "code",
       "source": [
+        "from os import path\n",
         "import pandas as pd\n",
         "import tarfile\n",
         "import urllib.request"
@@ -36,7 +37,7 @@
       "metadata": {
         "id": "2fuw4oEfeNr1"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -52,56 +53,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 402
         },
         "id": "eNlcyFegdk4j",
-        "outputId": "bc2cf9cf-a69a-444e-8c42-e07ff7c4e620"
+        "outputId": "70eb5908-fa81-4590-8aa2-7d2198900197"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-09-16 12:44:44--  https://amazon-massive-nlu-dataset.s3.amazonaws.com/amazon-massive-dataset-1.1.tar.gz\n",
-            "Resolving amazon-massive-nlu-dataset.s3.amazonaws.com (amazon-massive-nlu-dataset.s3.amazonaws.com)... 52.217.229.185, 16.15.192.148, 3.5.23.239, ...\n",
-            "Connecting to amazon-massive-nlu-dataset.s3.amazonaws.com (amazon-massive-nlu-dataset.s3.amazonaws.com)|52.217.229.185|:443... connected.\n",
+            "--2025-09-16 12:55:25--  https://amazon-massive-nlu-dataset.s3.amazonaws.com/amazon-massive-dataset-1.1.tar.gz\n",
+            "Resolving amazon-massive-nlu-dataset.s3.amazonaws.com (amazon-massive-nlu-dataset.s3.amazonaws.com)... 52.216.240.236, 16.15.208.142, 52.216.106.188, ...\n",
+            "Connecting to amazon-massive-nlu-dataset.s3.amazonaws.com (amazon-massive-nlu-dataset.s3.amazonaws.com)|52.216.240.236|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 40251390 (38M) [application/x-gzip]\n",
-            "Saving to: ‘amazon-massive-dataset-1.1.tar.gz.5’\n",
+            "Saving to: ‘amazon-massive-dataset-1.1.tar.gz.2’\n",
             "\n",
-            "amazon-massive-data 100%[===================>]  38.39M  64.6MB/s    in 0.6s    \n",
+            "amazon-massive-data 100%[===================>]  38.39M  72.8MB/s    in 0.5s    \n",
             "\n",
-            "2025-09-16 12:44:45 (64.6 MB/s) - ‘amazon-massive-dataset-1.1.tar.gz.5’ saved [40251390/40251390]\n",
-            "\n",
-            "id                                                             0\n",
-            "locale                                                     mn-MN\n",
-            "partition                                                   test\n",
-            "scenario                                                   alarm\n",
-            "intent                                                 alarm_set\n",
-            "utt                энэ долоо хоног намайг таван цагт сэрээгээрэй\n",
-            "annot_utt      [date : энэ долоо хоног] намайг [time : таван ...\n",
-            "worker_id                                                     16\n",
-            "slot_method    [{'slot': 'time', 'method': 'translation'}, {'...\n",
-            "judgments      [{'worker_id': '5', 'intent_score': 1, 'slots_...\n",
-            "Name: 0, dtype: object\n",
-            "------------------------- TRUTHFULNESS ------------------------- \n",
-            "                                                statement  label\n",
-            "0      The mother tongue of Danielle Darrieux is French.      1\n",
-            "1      The mother tongue of Danielle Darrieux is Engl...      0\n",
-            "2      The official religion of Edwin of Northumbria ...      1\n",
-            "3      The official religion of Edwin of Northumbria ...      0\n",
-            "4      The mother tongue of Thomas Joannes Stieltjes ...      1\n",
-            "...                                                  ...    ...\n",
-            "31959          Jerusalem of Gold was written in Finnish.      0\n",
-            "31960  The language used by Jean-Pierre Dionnet is Fr...      1\n",
-            "31961  The language used by Jean-Pierre Dionnet is Sp...      0\n",
-            "31962                             Subair works as actor.      1\n",
-            "31963                          Subair works as composer.      0\n",
-            "\n",
-            "[31964 rows x 2 columns]\n"
+            "2025-09-16 12:55:26 (72.8 MB/s) - ‘amazon-massive-dataset-1.1.tar.gz.2’ saved [40251390/40251390]\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "list indices must be integers or slices, not str",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-156778073.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mlanguages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mtarfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"amazon-massive-dataset-1.1.tar.gz\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r:gz\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtar\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m      \u001b[0mlanguages\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'en'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'en-US.jsonl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m      \u001b[0mlanguages\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'it'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'it-IT.jsonl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlanguages\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
           ]
         }
       ],
@@ -110,13 +97,14 @@
         "!wget https://amazon-massive-nlu-dataset.s3.amazonaws.com/amazon-massive-dataset-1.1.tar.gz\n",
         "dfs = []\n",
         "with tarfile.open(\"amazon-massive-dataset-1.1.tar.gz\", \"r:gz\") as tar:\n",
-        "     for member in tar:\n",
-        "        if member.name.endswith(\".jsonl\") and member.name.contains:\n",
-        "            f = tar.extractfile(member)\n",
-        "            dfs.append(pd.read_json(f, lines=True))\n",
+        "     dfs['en'] = pd.read_json(path.join('data', 'en-US.jsonl'),lines = True)\n",
+        "     dfs['it'] = pd.read_json(path.join('data', 'it-IT.jsonl'),lines = True)\n",
         "df = pd.concat(dfs)\n",
-        "print(df.iloc[0])\n",
+        "print(df.iloc[-1])\n",
+        "print(df)\n",
         "exit()\n",
+        "\n",
+        "# and member.name.contains\n",
         "\n",
         "\n",
         "# TRUTHFULNESS (true/false claims, binary classification)\n",
