--- a/Lab1_classification.ipynb
+++ b/Lab1_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfO7clddBHoO9iq+3BubRS",
+      "authorship_tag": "ABX9TyPVw/fASGAxBZIMiD5agXU8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,13 +36,13 @@
       "metadata": {
         "id": "2fuw4oEfeNr1"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Load the labelled datasets for:\n",
+        "# Getting the labelled datasets for:\n",
         "- ***binary* classification**:\n",
         "    1. **Truthfulness** (True/false claims)\n",
         "        - *[The Geometry of Truth: Emergent Linear Structure in Large Language Model Representations of True/False Datasets](https://github.com/saprmarks/geometry-of-truth/tree/main)*\n",
@@ -71,7 +71,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -156,7 +156,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Data exploration"
+        "# Data exploration"
       ],
       "metadata": {
         "id": "6e2X9PM43AQX"
@@ -192,7 +192,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,6 +269,111 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Dataset and DataLoader (PyTorch) and DataModule (PyTorch Lightining)\n",
+        "1. [Dataset; DataLoader](https://docs.pytorch.org/tutorials/beginner/basics/data_tutorial.html)\n",
+        "2. [DataModule](https://lightning.ai/docs/pytorch/stable/data/datamodule.html)\n"
+      ],
+      "metadata": {
+        "id": "BcVEVSY3II1i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torch.utils.data import Dataset, DataLoader, random_split"
+      ],
+      "metadata": {
+        "id": "WeNuoMpzIQR3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MyDataset(Dataset):\n",
+        "    def __init__(self, df:pd.DataFrame):\n",
+        "\n",
+        "        # Create our inputs (Xs) and target outputs (Ys)\n",
+        "        self.x = df['doc'].values\n",
+        "        self.y = df['label'].values\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return len(df)\n",
+        "\n",
+        "    def __getitem__(self, idx):\n",
+        "        return self.x[idx], self.y[idx]\n"
+      ],
+      "metadata": {
+        "id": "YckxFu1TJT9C"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from lightning import LightningDataModule"
+      ],
+      "metadata": {
+        "id": "yqRBoxA4L5Ko"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MNISTDataModule(LightningDataModule):\n",
+        "    def __init__(self, data: Dataset, batch_size: int = 32, val_size = 0.1, test_size = 0.1):\n",
+        "        super().__init__()\n",
+        "\n",
+        "        # Initialize the variables\n",
+        "        self.data = data\n",
+        "\n",
+        "        self.train_size = 1 - val_size - test_size\n",
+        "        self.val_size = val_size\n",
+        "        self.test_size = test_size\n",
+        "\n",
+        "        self.batch_size = batch_size\n",
+        "\n",
+        "        # Set the seed for reproducibility\n",
+        "        self.random_seed = 101\n",
+        "\n",
+        "    def setup(self, stage: str):\n",
+        "\n",
+        "        # Create the splits\n",
+        "        train_set, val_set, test_set = random_split(\n",
+        "            dataset = self.data,\n",
+        "            generator = torch.Generator().manual_seed(self.random_seed),\n",
+        "            lengths = [self.train_size, self.val_size, self.test_size])\n",
+        "\n",
+        "        self.train_set = train_set\n",
+        "        self.val_set = val_set\n",
+        "        self.test_set = test_set\n",
+        "\n",
+        "        print('\\nINPUTS:', len(self.data), '--> TRAIN:', round(((len(self.train_set) / len(self.data)) * 100), 1), '%',\n",
+        "              '|| VALIDATION:', round(((len(self.val_set) / len(self.data)) * 100), 1), '%',\n",
+        "              '|| TEST:', round(((len(self.test_set) / len(self.data)) * 100), 1), '%', '\\n')\n",
+        "\n",
+        "   def train_dataloader(self):\n",
+        "        return DataLoader(self.train_set, batch_size = self.batch_size, shuffle = True)\n",
+        "\n",
+        "    def val_dataloader(self):\n",
+        "        return DataLoader(self.val_set, batch_size = self.batch_size, shuffle = False)\n",
+        "\n",
+        "    def test_dataloader(self):\n",
+        "        return DataLoader(self.test_set, batch_size = self.batch_size, shuffle = False)"
+      ],
+      "metadata": {
+        "id": "ilFDZG5VLqFN"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
