--- a/Lab1_classification.ipynb
+++ b/Lab1_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNKIst0bBaDSk/y7pMbiLqJ",
+      "authorship_tag": "ABX9TyN0iaA1qwquZHyhFETFuVT9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2535,8 +2535,9 @@
         "dataloaders.setup('')\n",
         "train_set = dataloaders.train_dataloader()\n",
         "\n",
+        "print(\"MAPPING:\", dataset.class_mapping)\n",
+        "\n",
         "# Get the first batch\n",
-        "#x, y = next(iter(train_set))\n",
         "x, y = list(train_set)[0]\n",
         "for x_item, y_item in zip(x, y):\n",
         "    print(\"DOC:\", x_item, \"--> CLASS:\", y_item)#'--> LABEL', dataset.class_mapping[y_item.item()])"
@@ -2736,7 +2737,7 @@
         "        outputs = self(docs)\n",
         "        #print('y_hat:', outputs.shape, outputs)\n",
         "\n",
-        "        labels = labels.flatten()\n",
+        "        labels = labels.flatten().to(self.device)\n",
         "        #print('LABELS:', labels.shape, labels)\n",
         "\n",
         "        # Compute the loss\n",
@@ -2823,7 +2824,6 @@
       ],
       "metadata": {
         "id": "MX5OzamuWw6a",
-        "outputId": "bd3305d9-7325-4a94-80c2-a617bb575425",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 281,
@@ -2884,7 +2884,8 @@
             "65eb2c9422854d5586490ffc0a5ea681",
             "ab61e422e16044f4b47e5d9e3c74e65e"
           ]
-        }
+        },
+        "outputId": "bd3305d9-7325-4a94-80c2-a617bb575425"
       },
       "execution_count": 16,
       "outputs": [
