--- a/Lab1_NLG_metrics.ipynb
+++ b/Lab1_NLG_metrics.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cec25c84",
    "metadata": {},
    "outputs": [],
@@ -24,10 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d7ef3d06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bronzini/repositories/FM_2025/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import evaluate"
    ]
@@ -42,10 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9e538935",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"The sun set behind the hills\" <<-->> \"The moon set behind the hills\"\n",
+      "--> ROUGE-1 F1 Score: 0.83\n",
+      "--> ROUGE-2 F1 Score: 0.60\n",
+      "--> ROUGE-L F1 Score: 0.83\n"
+     ]
+    }
+   ],
    "source": [
     "rouge_metric = evaluate.load(\"rouge\")\n",
     "\n",
@@ -69,10 +89,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0ca8e5ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"The sun set behind the hills\" <<-->> \"The moon set behind the hills\"\n",
+      "--> BLEU Score: 53.73\n"
+     ]
+    }
+   ],
    "source": [
     "bleu_metric = evaluate.load(\"bleu\")\n",
     "\n",
@@ -102,10 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5b327ebd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"The sun set behind the hills\" <<-->> \"The moon set behind the hills\"\n",
+      "--> BERTScore (F1): 0.92\n"
+     ]
+    }
+   ],
    "source": [
     "bertscore = evaluate.load(\"bertscore\")\n",
     "\n",
@@ -125,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7c097bbd",
    "metadata": {},
    "outputs": [],
@@ -135,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "edea872f",
    "metadata": {},
    "outputs": [],
@@ -145,10 +183,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "58249acf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"The sun set behind the hills\" <<-->> \"The moon set behind the hills\"\n",
+      "--> Cosine Similarity: 0.71\n"
+     ]
+    }
+   ],
    "source": [
     "referece_embedding = embedding_model.encode(reference)\n",
     "candidate_embedding = embedding_model.encode(candidate)\n",
@@ -168,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6d4d5ebb",
    "metadata": {},
    "outputs": [],
@@ -178,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "94ed1219",
    "metadata": {},
    "outputs": [],
@@ -192,10 +239,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1cc2f4ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Score: 0.75] London has 9,787,426 inhabitants at the 2011 census\n",
+      "[Score: 0.46] London is known for its financial district\n",
+      "[Score: 0.26] The United Kingdom is the fourth largest exporter of goods in the world\n"
+     ]
+    }
+   ],
    "source": [
     "query_embedding = embedding_model.encode(query)\n",
     "doc_embeddings = embedding_model.encode(docs)\n",
@@ -233,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cf94a1b2",
    "metadata": {},
    "outputs": [],
@@ -251,10 +308,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d29e8150",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cuda:0\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import pipeline\n",
     "pipe = pipeline(task = \"text-generation\", model = model_name)"
@@ -270,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 14,
    "id": "7132adba",
    "metadata": {},
    "outputs": [],
@@ -280,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 15,
    "id": "871fd20e",
    "metadata": {},
    "outputs": [
@@ -289,13 +354,13 @@
      "output_type": "stream",
      "text": [
       "Input: \"Life is full of surprises.\"\n",
-      "Output: \"Vita è piena di sorpresa.\"\n",
+      "Output: \"Vita è piena di sorprese.\"\n",
       "\n",
       "Input: \"They played soccer last weekend.\"\n",
-      "Output: \"In settimana precedente hanno partecipato a calcio.\"\n",
+      "Output: \"1953 si giocavano a calcio la settimana precedente.\"\n",
       "\n",
       "Input: \"We are going to the park later.\"\n",
-      "Output: \"amo volerne al parco dopo.\"\n",
+      "Output: \"Vadremo al parco dopo.\"\n",
       "\n"
      ]
     }
@@ -331,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "430228df",
    "metadata": {},
    "outputs": [
@@ -340,20 +405,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "LLM OUTPUT: \"Vita è piena di sorpresa.\" <<-->> TARGET: \"La vita è piena di sorprese.\"\n",
-      "--> BLEU Score: 0.00\n",
-      "--> BERTScore (F1): 0.94\n",
-      "--> Cosine Similarity: 0.96\n",
+      "LLM OUTPUT: \"Vita è piena di sorprese.\" <<-->> TARGET: \"La vita è piena di sorprese.\"\n",
+      "--> BLEU Score: 64.32\n",
+      "--> BERTScore (F1): 0.96\n",
+      "--> Cosine Similarity: 0.97\n",
       "\n",
-      "LLM OUTPUT: \"In settimana precedente hanno partecipato a calcio.\" <<-->> TARGET: \"Hanno giocato a calcio lo scorso fine settimana.\"\n",
+      "LLM OUTPUT: \"1953 si giocavano a calcio la settimana precedente.\" <<-->> TARGET: \"Hanno giocato a calcio lo scorso fine settimana.\"\n",
       "--> BLEU Score: 0.00\n",
-      "--> BERTScore (F1): 0.74\n",
-      "--> Cosine Similarity: 0.73\n",
+      "--> BERTScore (F1): 0.78\n",
+      "--> Cosine Similarity: 0.68\n",
       "\n",
-      "LLM OUTPUT: \"amo volerne al parco dopo.\" <<-->> TARGET: \"Andremo al parco più tardi.\"\n",
+      "LLM OUTPUT: \"Vadremo al parco dopo.\" <<-->> TARGET: \"Andremo al parco più tardi.\"\n",
       "--> BLEU Score: 0.00\n",
-      "--> BERTScore (F1): 0.76\n",
-      "--> Cosine Similarity: 0.60\n"
+      "--> BERTScore (F1): 0.79\n",
+      "--> Cosine Similarity: 0.67\n"
      ]
     }
    ],
@@ -389,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 17,
    "id": "c6ac5143",
    "metadata": {},
    "outputs": [],
@@ -417,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 18,
    "id": "911f7039",
    "metadata": {},
    "outputs": [
@@ -435,7 +500,7 @@
       "OUTPUT: \"2001\"\n",
       "\n",
       "QUESTION: \"Which English philosopher wrote Leviathan in 1651?\"\n",
-      "OUTPUT: \"John Locke\"\n",
+      "OUTPUT: \"Leviathan\"\n",
       "\n"
      ]
     }
@@ -463,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 19,
    "id": "59746771",
    "metadata": {},
    "outputs": [
@@ -493,12 +558,12 @@
       "--> BERTScore (F1): 1.00\n",
       "--> Cosine Similarity: 1.00\n",
       "\n",
-      "LLM OUTPUT: \"John Locke\" <<-->> TARGET: \"Thomas Hobbes\"\n",
+      "LLM OUTPUT: \"Leviathan\" <<-->> TARGET: \"Thomas Hobbes\"\n",
       "--> BLEU Score: 0.00\n",
       "--> Exact Match (EM): False\n",
       "--> Is mentioned: False\n",
-      "--> BERTScore (F1): 0.58\n",
-      "--> Cosine Similarity: 0.48\n"
+      "--> BERTScore (F1): 0.44\n",
+      "--> Cosine Similarity: 0.27\n"
      ]
     }
    ],
@@ -524,6 +589,17 @@
     "     \n",
     "    cosine_similarity = embedding_model.similarity(embedding_model.encode(target), embedding_model.encode(output)).squeeze()\n",
     "    print(f\"--> Cosine Similarity: {cosine_similarity:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24e7c60a",
+   "metadata": {},
+   "source": [
+    "# Prompt engineering\n",
+    "1. Zero-shot (as above)\n",
+    "2. In-Context Learning (ICL; include examples in the prompts)\n",
+    "3. Chain-of-Thought (CoT)"
    ]
   }
  ],
